// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTransactions has the expected html structure 1`] = `
<div
  class="tm-page"
  data-title="Transactions"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
        <!---->
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total Steak
                </h3>
                <h2>
                  0.0000…
                </h2>
              </div>
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available Steak
                </h3>
                <h2>
                  0.0000…
                </h2>
              </div>
              <!---->
              <!---->
            </div>
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                Address Not Found
              </div>
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
            <div
              class="tabs"
            />
          </div>
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
            <a>
              <i
                class="material-icons"
              >
                refresh
              </i>
            </a>
            <a>
              <i
                class="material-icons"
              >
                search
              </i>
            </a>
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
            <a
              class=""
              href="#/preferences"
              id="settings"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </a>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main ps"
  >
    <!---->
    <tm-li-any-transaction
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="Steak"
      proposalsurl="/governance/proposals"
      transaction="[object Object]"
      validators=""
      validatorurl="/staking/validators"
    />
    <tm-li-any-transaction
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="Steak"
      proposalsurl="/governance/proposals"
      transaction="[object Object]"
      validators=""
      validatorurl="/staking/validators"
    />
    <tm-li-any-transaction
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="Steak"
      proposalsurl="/governance/proposals"
      transaction="[object Object]"
      validators=""
      validatorurl="/staking/validators"
    />
    <tm-li-any-transaction
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="Steak"
      proposalsurl="/governance/proposals"
      transaction="[object Object]"
      validators=""
      validatorurl="/staking/validators"
    />
    <tm-li-any-transaction
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="Steak"
      proposalsurl="/governance/proposals"
      transaction="[object Object]"
      validators=""
      validatorurl="/staking/validators"
    />
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`PageTransactions should filter the transactions 1`] = `
<div
  class="tm-page"
  data-title="Transactions"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
        <!---->
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total Steak
                </h3>
                <h2>
                  0.0000…
                </h2>
              </div>
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available Steak
                </h3>
                <h2>
                  0.0000…
                </h2>
              </div>
              <!---->
              <!---->
            </div>
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                Address Not Found
              </div>
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
            <div
              class="tabs"
            />
          </div>
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
            <a>
              <i
                class="material-icons"
              >
                refresh
              </i>
            </a>
            <a>
              <i
                class="material-icons"
              >
                search
              </i>
            </a>
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
            <a
              class=""
              href="#/preferences"
              id="settings"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </a>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <div
      class="tm-modal-search"
    >
      <div
        class="tm-modal-search-container"
      >
        <div
          class="tm-form-group"
        >
          <!---->
          <!---->
          <div
            class="tm-form-group__field"
          >
            <div
              class="tm-modal-search-field"
            >
              <input
                class="mousetrap tm-field"
                id="search-input"
                placeholder="Search..."
                type="text"
              />
              <button
                class="tm-btn"
              >
                <span
                  class="tm-btn__container"
                >
                  <i
                    aria-hidden="true"
                    class="tm-btn__icon material-icons"
                  >
                    close
                  </i>
                  <!---->
                  <!---->
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <tm-li-any-transaction
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="Steak"
      proposalsurl="/governance/proposals"
      transaction="[object Object]"
      validators=""
      validatorurl="/staking/validators"
    />
  </main>
</div>
`;
